--- a/Affinityx-Bot.html
+++ b/Affinityx-Bot.html
@@ -12,7 +12,13 @@
         <br>
         <h1>Affinityx-Bot</h1>
 
-
+<script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+<df-messenger
+  intent="WELCOME"
+  chat-title="Affinity-Bot"
+  agent-id="0c99acce-2dd4-4f8e-bdb3-b4c68d6c6808"
+  language-code="en"
+></df-messenger>
        
 
 
